@@ -3594,7 +3594,9 @@ AT_DATA([prog5.cob], [
             STOP RUN.
 ])
 
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COMPILE prog.cob], [0], [],
+[prog.cob: 22: warning: misaligned pointer 'VALPOINT' may cause undefined behaviour
+])
 AT_CHECK([./prog --version --verbose -jkl], [0], [])
 AT_CHECK([$COMPILE_MODULE prog2.cob], [0], [], [])
 AT_CHECK([$COBCRUN prog2 --ver --vers], [0], [],
